Fixed whitespace for mobilized

--- a/style.scss
+++ b/style.scss
@@ -66,7 +66,7 @@ article#main { margin:0 1px; border-bottom:none; padding:12px 15px; background:$
   }
 
   > section { margin:16px 24px 0 158px; padding-left:12px; border-left:1px solid $dark1;
-    > h1 { float:left; margin:4px 0 8px -170px; width:146px; text-align:right; font-size:24px; font-variant:small-caps; }
+    > h1 { float:left; margin:4px 0 4px -170px; width:146px; text-align:right; font-size:24px; font-variant:small-caps; }
     @media screen and (max-width:750px) { margin:16px 0 0 0; padding:0 12px; border:none;
       > h1 { float:none; margin-left:-12px; width:auto; text-align:left; }
     }
@@ -94,10 +94,11 @@ article#main { margin:0 1px; border-bottom:none; padding:12px 15px; background:$
   }
 
   body#portfolio & {
+    ul { margin-bottom:-6px; }
     ul:after { content:''; display:block; clear:both; }
-    li { float:left }
-    a { display:block; padding:0 6px;
-      img.thumb { min-width:45px; height:75px; padding:4px; @include box-shadow(0, 2px, 10px, $lite0); @include transition(all 0.2s);}
+    li { float:left; }
+    a { display:block; padding:3px 6px;
+      img.thumb { min-width:45px; height:75px; padding:3px; @include box-shadow(0, 2px, 7px, $lite0); @include transition(all 0.2s);}
       &:hover img.thumb { @include transform(scale(1.15)); }
     }
   }
